2004-11-29  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgettextpo_la_LDFLAGS): Add @LTLIBINTL@ @LTLIBICONV@.
	Reported by Sam Steingold <sds@gnu.org>.

2004-10-01  Guido Flohr  <guido@imperia.net>

	* x-perl.c (x_perl_prelex): Recognize function names starting with '-'.
	Reported by Ryan Anderson <ryan@autoweb.net>.

2004-09-16  Bruno Haible  <bruno@clisp.org>

	* format.h (formatstring_error_logger_t): Modify decl for GCC <= 3.0.
	Reported by Jens A. Tkotz <jens@peino.de>.

2004-09-11  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (msginit_SOURCES): Add plural-count.c.
	* msginit.c (update_msgstr_plurals): New function.
	(main): Call it.
	* msgmerge.c (match_domain): Provide the appropriate number of plural
	forms for messages that don't occur in the Def.po file.
	Reported by Jens A. Tkotz <jens@peino.de>.

2004-09-06  Bruno Haible  <bruno@clisp.org>

	* format.h (formatstring_error_logger_t): New type.
	(struct formatstring_parser): Change calling convention of 'check'
	method.
	(check_msgid_msgstr_format): New declaration.
	* format-awk.c (format_check): Use error_logger argument instead of
	noisy and error_at_line.
	* format-c.c (format_check): Likewise.
	* format-csharp.c (format_check): Likewise.
	* format-elisp.c (format_check): Likewise.
	* format-gcc-internal.c (format_check): Likewise.
	* format-java.c (format_check): Likewise.
	* format-librep.c (format_check): Likewise.
	* format-lisp.c (format_check): Likewise.
	* format-pascal.c (format_check): Likewise.
	* format-perl.c (format_check): Likewise.
	* format-perl-brace.c (format_check): Likewise.
	* format-php.c (format_check): Likewise.
	* format-python.c (format_check): Likewise.
	* format-qt.c (format_check): Likewise.
	* format-sh.c (format_check): Likewise.
	* format-tcl.c (format_check): Likewise.
	* format-ycp.c (format_check): Likewise.
	* format.c (check_msgid_msgstr_format): New function, extracted from
	msgfmt.c.
	* msgfmt.c (curr_msgid_pos): New variable.